# rust_ledger

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  rledger.yaml  test.csv
.github/workflows/: release.yml  rust-build-test.yml  rust.yml
examples/: example.yaml  rledger.yaml
src/: accounts.rs  balance.rs  cli.rs  csv.rs  error.rs  ledger.rs  ledger_error.rs  main.rs  models.rs  read_csv.rs  register.rs  register_yaml_test.rs
src/cli/: account.rs  args.rs  balance.rs  budget.rs  csv.rs  register.rs  version.rs
src/model/: ledger.rs
tests/: cli.rs
