[package]
name = "rust_ledger"
version = "0.4.3"
authors = ["Eric Crowder <eric@ebcrowder.dev>"]
edition = "2018"
license = "GPL-3.0"
description = "CLI accounting tool"
keywords = ["accounting", "finance", "budget"]
categories = ["command-line-utilities"]
repository = "https://github.com/ebcrowder/rust_ledger"
homepage = "https://github.com/ebcrowder/rust_ledger"
readme = "README.md"

[dependencies]
serde_yaml = "0.8.13"
serde = { version = "1.0.116", features = ["derive"] }
csv = "1.1.3"
colored = "2.0.0"
monee = "0.0.6"
chrono = { version = "0.4.15", features = ["serde"] }
clap = "2.33.3"
