[package]
name = "rust_ledger"
version = "0.4.3"
authors = ["Eric Crowder <eric@ebcrowder.dev>"]
edition = "2018"
license = "GPL-3.0"
description = "CLI accounting tool"
keywords = ["accounting", "finance", "budget"]
categories = ["command-line-utilities"]
repository = "https://github.com/ebcrowder/rust_ledger"
homepage = "https://github.com/ebcrowder/rust_ledger"
readme = "README.md"

[dependencies]
serde_yaml = "0.8.17"
serde = { version = "1.0.123", features = ["derive"] }
csv = "1.1.5"
monee = "0.0.6"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
prettytable-rs = "0.8"

[dev-dependencies]
assert_cmd = "1.0.3"