[package]
name = "rust_ledger"
version = "0.8.0"
authors = ["Eric Crowder <eric@ebcrowder.dev>"]
edition = "2021"
license = "GPL-3.0"
description = "CLI accounting tool"
keywords = ["accounting", "finance", "budget"]
categories = ["command-line-utilities"]
repository = "https://github.com/ebcrowder/rust_ledger"
homepage = "https://github.com/ebcrowder/rust_ledger"
readme = "README.md"

[dependencies]
serde_yaml = "0.8.21"
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1.6"
rusty-money = "0.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
prettytable-rs = "0.10"

[dev-dependencies]
assert_cmd = "2.0.0"